# api/swagger/gifms.yaml
@@ -232,6 +232,16 @@ tags:
     externalDocs:
       description: Find out more
       url: 'http://kefinance.clintonhealthaccess.org/api/payment_type/docs'
+  - name: Approval
+    description: Everything About Approval
+    externalDocs:
+      description: Find out more
+      url: 'http://kefinance.clintonhealthaccess.org/api/approval/docs'
+  - name: Allocation
+    description: Everything About Allocation
+    externalDocs:
+      description: Find out more
+      url: 'http://kefinance.clintonhealthaccess.org/api/allocation/docs'
 schemes:
   - http
   - https
@@ -858,6 +868,290 @@ paths:
           description: Invalid ID supplied
         '404':
           description: advance_approval not found
+      security:
+        - api_key: []
+  /allocations:
+    get:
+      summary: allocations List
+      description: >
+        The allocation endpoint returns multiple allocation requested given the
+        parameters injected. 
+      parameters:
+        - name: allocation_id
+          in: query
+          description: allocation id
+          required: false
+          type: number
+          format: integer
+      tags:
+        - Allocation
+      responses:
+        '200':
+          description: An array of allocation returned
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/allocation'
+        '404':
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+      security:
+        - api_key: []
+  /allocation:
+    post:
+      tags:
+        - Allocation
+      summary: Add a new allocation
+      description: new allocation
+      operationId: add_allocation
+      consumes:
+        - application/json
+        - application/xml
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - in: body
+          name: body
+          description: allocation object that needs to be added
+          required: true
+          schema:
+            $ref: '#/definitions/allocation'
+      responses:
+        '200':
+          description: Successfully added a new allocation for approval
+        '405':
+          description: 'Invalid input,adding a new allocation was unsuccessful'
+      security:
+        - api_key: []
+    put:
+      tags:
+        - Allocation
+      summary: Update an existing allocation
+      description: ''
+      operationId: update_allocation
+      consumes:
+        - application/json
+        - application/xml
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - in: body
+          name: body
+          description: allocation object that needs to be added
+          required: true
+          schema:
+            $ref: '#/definitions/allocation'
+      responses:
+        '200':
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Success'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: allocation not found
+        '405':
+          description: Validation exception
+      security:
+        - api_key: []
+  '/allocation/{allocation_id}':
+    get:
+      tags:
+        - Allocation
+      summary: Find allocation by ID
+      description: Returns a single allocation
+      operationId: get_allocation_by_id
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: allocation_id
+          in: path
+          description: ID of allocation to return object
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/allocation'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: allocation not found
+      security:
+        - api_key: []
+    delete:
+      tags:
+        - Allocation
+      summary: Deletes an allocation
+      description: ''
+      operationId: delete_allocation
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: api_key
+          in: header
+          required: true
+          type: string
+        - name: allocation_id
+          in: path
+          description: allocation id to delete
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: allocation not found
+      security:
+        - api_key: []
+  /approvals:
+    get:
+      summary: approvals List
+      description: >
+        The approval endpoint returns multiple approval requested given the
+        parameters injected. 
+      parameters:
+        - name: approval_id
+          in: query
+          description: approval id
+          required: false
+          type: number
+          format: integer
+      tags:
+        - Approval
+      responses:
+        '200':
+          description: An array of approval returned
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/approval'
+        '404':
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+      security:
+        - api_key: []
+  /approval:
+    post:
+      tags:
+        - Approval
+      summary: Add a new approval
+      description: new approval
+      operationId: add_approval
+      consumes:
+        - application/json
+        - application/xml
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - in: body
+          name: body
+          description: approval object that needs to be added
+          required: true
+          schema:
+            $ref: '#/definitions/approval'
+      responses:
+        '200':
+          description: Successfully added a new approval for approval
+        '405':
+          description: 'Invalid input,adding a new approval was unsuccessful'
+      security:
+        - api_key: []
+    put:
+      tags:
+        - Approval
+      summary: Update an existing approval
+      description: ''
+      operationId: update_approval
+      consumes:
+        - application/json
+        - application/xml
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - in: body
+          name: body
+          description: approval object that needs to be added
+          required: true
+          schema:
+            $ref: '#/definitions/approval'
+      responses:
+        '200':
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Success'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: approval not found
+        '405':
+          description: Validation exception
+      security:
+        - api_key: []
+  '/approval/{approval_id}':
+    get:
+      tags:
+        - Approval
+      summary: Find approval by ID
+      description: Returns a single approval
+      operationId: get_approval_by_id
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: approval_id
+          in: path
+          description: ID of approval to return object
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/approval'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: approval not found
+      security:
+        - api_key: []
+    delete:
+      tags:
+        - Approval
+      summary: Deletes an approval
+      description: ''
+      operationId: delete_approval
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: api_key
+          in: header
+          required: true
+          type: string
+        - name: approval_id
+          in: path
+          description: approval id to delete
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: approval not found
       security:
         - api_key: []
   /claims:
@@ -7656,6 +7950,68 @@ definitions:
         example: '2010-02-11'
     xml:
       name: advance_approval
+  allocation:
+    type: object
+    required:
+      - id
+      - created_at
+    properties:
+      id:
+        type: integer
+        format: int64
+        example: 1
+      num:
+        type: number
+        format: int64
+        example: 20000
+      str:
+        type: string
+        example: PayPal.pdf
+      date:
+        type: string
+        format: date-time
+        example: '2010-02-11'
+      created_at:
+        type: string
+        format: date-time
+        example: '2010-02-11'
+      updated_at:
+        type: string
+        format: date-time
+        example: '2010-02-11'
+    xml:
+      name: allocation
+  approval:
+    type: object
+    required:
+      - id
+      - created_at
+    properties:
+      id:
+        type: integer
+        format: int64
+        example: 1
+      num:
+        type: number
+        format: int64
+        example: 20000
+      str:
+        type: string
+        example: PayPal.pdf
+      date:
+        type: string
+        format: date-time
+        example: '2010-02-11'
+      created_at:
+        type: string
+        format: date-time
+        example: '2010-02-11'
+      updated_at:
+        type: string
+        format: date-time
+        example: '2010-02-11'
+    xml:
+      name: approval
   claim:
     type: object
     required:
