# app/Http/Controllers/AllocationApi.php
@@ -1,0 +1,138 @@
+<?php
+
+/**
+ * Grants Information Management System
+ * Finance management sysytem
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: mwangikevinn@gmail.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+
+namespace App\Http\Controllers;
+
+use Illuminate\Support\Facades\Request;
+
+class AllocationApi extends Controller
+{
+    /**
+     * Constructor
+     */
+    public function __construct()
+    {
+    }
+
+    /**
+     * Operation addAllocation
+     *
+     * Add a new allocation.
+     *
+     *
+     * @return Http response
+     */
+    public function addAllocation()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+        if (!isset($input['body'])) {
+            throw new \InvalidArgumentException('Missing the required parameter $body when calling addAllocation');
+        }
+        $body = $input['body'];
+
+
+        return response('How about implementing addAllocation as a POST method ?');
+    }
+    /**
+     * Operation updateAllocation
+     *
+     * Update an existing allocation.
+     *
+     *
+     * @return Http response
+     */
+    public function updateAllocation()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+        if (!isset($input['body'])) {
+            throw new \InvalidArgumentException('Missing the required parameter $body when calling updateAllocation');
+        }
+        $body = $input['body'];
+
+
+        return response('How about implementing updateAllocation as a PUT method ?');
+    }
+    /**
+     * Operation deleteAllocation
+     *
+     * Deletes an allocation.
+     *
+     * @param int $allocation_id allocation id to delete (required)
+     *
+     * @return Http response
+     */
+    public function deleteAllocation($allocation_id)
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+
+        return response('How about implementing deleteAllocation as a DELETE method ?');
+    }
+    /**
+     * Operation getAllocationById
+     *
+     * Find allocation by ID.
+     *
+     * @param int $allocation_id ID of allocation to return object (required)
+     *
+     * @return Http response
+     */
+    public function getAllocationById($allocation_id)
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+
+        return response('How about implementing getAllocationById as a GET method ?');
+    }
+    /**
+     * Operation getAllocations
+     *
+     * allocations List.
+     *
+     *
+     * @return Http response
+     */
+    public function getAllocations()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+        $allocation_id = $input['allocation_id'];
+
+
+        return response('How about implementing getAllocations as a GET method ?');
+    }
+}
