# app/Http/Controllers/ApprovalApi.php
@@ -1,0 +1,138 @@
+<?php
+
+/**
+ * Grants Information Management System
+ * Finance management sysytem
+ *
+ * OpenAPI spec version: 1.0.0
+ * Contact: mwangikevinn@gmail.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+
+namespace App\Http\Controllers;
+
+use Illuminate\Support\Facades\Request;
+
+class ApprovalApi extends Controller
+{
+    /**
+     * Constructor
+     */
+    public function __construct()
+    {
+    }
+
+    /**
+     * Operation addApproval
+     *
+     * Add a new approval.
+     *
+     *
+     * @return Http response
+     */
+    public function addApproval()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+        if (!isset($input['body'])) {
+            throw new \InvalidArgumentException('Missing the required parameter $body when calling addApproval');
+        }
+        $body = $input['body'];
+
+
+        return response('How about implementing addApproval as a POST method ?');
+    }
+    /**
+     * Operation updateApproval
+     *
+     * Update an existing approval.
+     *
+     *
+     * @return Http response
+     */
+    public function updateApproval()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+        if (!isset($input['body'])) {
+            throw new \InvalidArgumentException('Missing the required parameter $body when calling updateApproval');
+        }
+        $body = $input['body'];
+
+
+        return response('How about implementing updateApproval as a PUT method ?');
+    }
+    /**
+     * Operation deleteApproval
+     *
+     * Deletes an approval.
+     *
+     * @param int $approval_id approval id to delete (required)
+     *
+     * @return Http response
+     */
+    public function deleteApproval($approval_id)
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+
+        return response('How about implementing deleteApproval as a DELETE method ?');
+    }
+    /**
+     * Operation getApprovalById
+     *
+     * Find approval by ID.
+     *
+     * @param int $approval_id ID of approval to return object (required)
+     *
+     * @return Http response
+     */
+    public function getApprovalById($approval_id)
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+
+        return response('How about implementing getApprovalById as a GET method ?');
+    }
+    /**
+     * Operation getApprovals
+     *
+     * approvals List.
+     *
+     *
+     * @return Http response
+     */
+    public function getApprovals()
+    {
+        $input = Request::all();
+
+        //path params validation
+
+
+        //not path params validation
+        $approval_id = $input['approval_id'];
+
+
+        return response('How about implementing getApprovals as a GET method ?');
+    }
+}
